# sensor-vhal

./: .SocketSensor.cpp.swp  .test.cpp.swp  Android.mk  README.md  SensorBase.cpp  SensorBase.h  SocketSensor.cpp  SocketSensor.h  sensors.cpp  sensors.h  sensors_helper.h  sensors_vhal.c  sensors_vhal.cpp  sensors_vhal.h  test.cpp
Gtest/: Android.mk  SensorFixture.cpp  SensorFixture.h  main.cpp  sensor_client.cpp  sensor_client.h  sensors_client.cpp  sensors_client.h  sensors_fixture.cpp  sensors_fixture.h
sock_utils/: Android.mk  CMakeLists.txt  sock_client.cpp  sock_server.cpp  sock_utils.cpp
sock_utils/include/: cg_mutex.h  sock_client.h  sock_comm.h  sock_server.h  sock_utils.h
sock_utils/test/: Android.mk  CMakeLists.txt  test_sock_client.cpp  test_sock_server.cpp
